Changed missing value on border for button

--- a/code/style.css
+++ b/code/style.css
@@ -34,7 +34,7 @@ font-size: 35px;
   align-self: flex-start;
   font-size: 11px;
   border: none;
-  border-radius: %;
+  border-radius: 10%;
   background-color: #F0F0F0;
 }
 
