--- a/code/style.css
+++ b/code/style.css
@@ -1,32 +1,59 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   background: #b3d8f2;
   color: black;
 }
 
 header {
-  margin: 15px 15px 5px 15px;
+  margin: 15px 0px 5px 0px;
+  border: solid 2px;
 }
 
 .nav-bar {
-  display: flex;
+  display: grid;
+  /*grid-template-columns: repeat(11, 1fr);*/
+  grid-template-columns: 85px 3fr 2fr;
+  grid-template-rows: 60px;
   background: white;
-  justify-content: space-between;
+  height: 60px;
+  margin-bottom: 15px;
   align-items: center;
-  height: 40px;
-  padding: 10px;
+}
+
+.logo {
+  height: 35px;
+}
+
+.logo-container {
+  grid-column: 1 / 2;
+  margin: 10px;
 }
 
 h1 {
-  color: black;
-  font-family: arial;
-  font-size: 36px;
+  color: palevioletred;
+  font-family: georgia;
+  font-size: 28px;
   font-style: italic;
+  grid-column: 2 / 6;
+
 }
+
+.nav {
+  grid-column: 9 / 12;
+  margin: 10px;
+} 
 
 .nav-item {
   color: black;
   font-family: helvetica;
+  font-style: oblique;
   text-decoration: none;
+  padding: 10px;
   margin: 0px;
 }
 
@@ -34,39 +61,38 @@ a:hover {
   color: floralwhite;
 }
 
-.news-container { 
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  grid-gap: 15px;
-  padding: 15px 20px 5px 20px;
-}
-
-.big-news-image {
-  grid-column: 1 / 5;
-  grid-row: 1 / 3;
-  background: pink;
+.big-news-box {
+  display: flex;
+  margin: 20px;
 }
 
 .big-image {
-  height: 390px;
+  height: 500px;
+  object-fit: fill;
+  margin-right: 15px;
+  border-radius: 2%;
 }
 
-.big-news-text {
+.big-news-textbox {
   grid-column: 5 / 9;
   grid-row: 1 / 3;
   background: pink;
+  border-radius: 2%;
 }
 
 .big-news-paragraph {
   font-family: Arial, Helvetica, sans-serif; 
   font-size: medium;
   font-style: italic;
+  padding: 20px;
 }
 
 h2 {
-padding: 5px 0px 0px 0px;
-text-align: center;
+font-family: georgia;
+font-style: italic;
+font-size: 36pt;
+padding: 15px;
+text-align: left;
 }
 
 p {
@@ -74,59 +100,47 @@ p {
   text-align: justify;
 }
 
-.small-news-one {
-  grid-column: 1 / 3;
-  grid-template-rows: 3 / 4;
-  background: whitesmoke;
+.news-grid { 
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 15px;
+  padding: 15px 20px 5px 20px;
+  margin-bottom: 10px;
 }
 
-.small-news-two {
-  grid-column: 3 / 5;
-  grid-template-rows: 3 / 4;
+.small-news {
+  display: flex;
   background: whitesmoke;
+  height: 350px;
+  width: 300px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 2%;
 }
 
-.small-news-three {
-  grid-column: 5 / 7;
-  grid-template-rows: 3 / 4;
-  background: whitesmoke;
+h3 {
+  background-color: yellow;
+  padding: 10px 15px 5px 15px;
+  font-size: x-large;
+  font-family: georgia;
+  color: black;
+  font-style: italic;
+  text-align: left;
+  margin: 0 auto;
 }
 
-.small-news-four {
-  grid-column: 7 / 9;
-  grid-template-rows: 3 / 4;
-  background: whitesmoke;
+h2:hover, h3:hover {
+  text-decoration: underline;
 }
 
-.small-news-five {
-  grid-column: 1 / 3;
-  grid-template-rows: 4 / 5;
-  background: whitesmoke;
-}
-
-.small-news-six {
-  grid-column: 3 / 5;
-  grid-template-rows: 4 / 5;
-  background: whitesmoke;
-}
-
-.small-news-seven {
-  grid-column: 5 / 7;
-  grid-template-rows: 4 / 5;
-  background: whitesmoke;
-}
-
-.small-news-eight {
-  grid-column: 7 / 9;
-  grid-template-rows: 4 / 5;
-  background: whitesmoke;
+.small-image {
+  height: 180px;
+  object-fit: fill;
 }
 
 .small-news-text {
   font-size: small;
-}
-
-h3 {
-  padding: 10px;
-  color: green;
+  padding: 0px 15px 10px 15px;
 }
