--- a/code/style.css
+++ b/code/style.css
@@ -52,40 +52,8 @@ li {
   
 }
 
-a {
-  text-decoration: none;
-  color: #fff;
-}
 
-li {
-  list-style: none;
-}
- .big-news {
-   display: grid;
-   grid-template-columns: repeat(8, 1fr);
-   grid-template-rows: repeat(3, 100px);
-   gap: 10px;
- }
 
- .grid-item {
-  background: pink;
- }
-
- .big-grid-item {
-  grid-column: span 8;
- } 
-
- .medium-grid-item {
-  grid-column: span 4;
- }
-
- .lonely-grid-item {
-  grid-column: 8/9;
- }
-
- img {
-  width: 200px;
- }
 
 
 /* styling for tablet (668 > 1024px) */
@@ -118,6 +86,42 @@ li {
     .big-news {
       display: grid;
     }
+
+        a {
+          text-decoration: none;
+          color: #fff;
+        }
+    
+        li {
+          list-style: none;
+        }
+    
+        .big-news {
+          display: grid;
+          grid-template-columns: repeat(8, 1fr);
+          grid-template-rows: repeat(3, 100px);
+          gap: 10px;
+        }
+    
+        .grid-item {
+          background: pink;
+        }
+    
+        .big-grid-item {
+          grid-column: span 8;
+        }
+    
+        .medium-grid-item {
+          grid-column: span 4;
+        }
+    
+        .lonely-grid-item {
+          grid-column: 8/9;
+        }
+    
+        img {
+          width: 200px;
+        }
 }
 
 
@@ -141,8 +145,54 @@ li {
 .menu {
   display: none;
 }
-    
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+li {
+  list-style: none;
+}
+
+.big-news {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(3, 5vw);
+  gap: 15px;
+}
+
+.grid__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.big-news-item {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+.grid-item-1 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 3;
   }
 
+.grid-item-2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
 
-
+.grid-item-3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 6;
+}
+}
