--- a/code/style.css
+++ b/code/style.css
@@ -198,6 +198,8 @@ h1 h2 h3 {
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   text-decoration: none;
   color: white;
+  
+  
 }
 
 .big-news-box a:visited {
@@ -212,8 +214,8 @@ h1 h2 h3 {
 .big-news-image {
   width: 100%;
   height: 800px;
-  grid-column-start: 1;
-  grid-column-end: span 2;
+  grid-column: 1/3;
+  
 }
 
 .big-news-title {
@@ -317,31 +319,35 @@ h1 h2 h3 {
     grid-template-columns: 50% 50%;
   }
 
-  .big-news-box a,
   .grid-container {
     margin: 50px;
   }
 
+  .big-news-box a{
+    grid-template-rows: 50% 50%;
+    margin:50px;
+  }
+
   .big-news-title {
     font-size: 55px;
+    grid-row:2/3;
   }
 
   .display-date {
     font-size: 20px;
     margin: 30px 50px;
   }
+  
 }
 
 /*mobile*/
 @media (max-width: 666px) {
   .news-grid {
     grid-template-columns: 100%;
+    gap:20px;
   }
 
-  .big-news-box a {
-    margin: 50px;
-  }
-
+  
   .grid-container {
     margin: 50px;
   }
@@ -350,20 +356,32 @@ h1 h2 h3 {
     display: none;
   }
 
+  .big-news-box a {
+    display: grid;
+    grid-template-columns: 1fr;
+    
+    height: 550px;
+    margin: 50px;
+    padding:15px;
+    
+    
+  }
+
   .big-news-title {
-    font-size: 45px;
-    grid-column-start: 1;
-    grid-column-end: span 2;
+    font-size: 30px;
+    grid-column:1/2;
+    
     color: black;
     text-shadow: none;
+    backdrop-filter:none;
+    
+    margin-left: 0;       
   }
 
   .big-news-image {
     width: 100%;
     height: 400px;
-    grid-column-start: 1;
-    grid-column-end: span 2;
-    margin-top: 70px;
+    grid-column:1/2;    
   }
 
   .display-date {
