--- a/code/style.css
+++ b/code/style.css
@@ -341,7 +341,7 @@ h1 h2 h3 {
 }
 
 /*mobile*/
-@media (max-width: 666px) {
+@media (min-width:515px) and (max-width: 666px) {
   .news-grid {
     grid-template-columns: 100%;
     gap:20px;
@@ -388,6 +388,64 @@ h1 h2 h3 {
     font-size: 20px;
     margin: 30px 50px;
     text-align: end;
+  }
+}
+
+/*smaller mobile screens*/
+@media (max-width: 514px) {
+  .news-grid {
+    grid-template-columns: 100%;
+    gap:20px;
+  }
+
+  
+  .grid-container {
+    margin: 50px;
+  }
+
+  .news-item-text {
+    display: none;
+  }
+
+  .big-news-box a {
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 400px;
+    margin: 50px;
+    padding:15px;
+  }
+
+  .big-news-title {
+    font-size: 20px;
+    grid-column:1/2;
+    
+    color: black;
+    text-shadow: none;
+    backdrop-filter:none;
+    
+    margin-left: 0;       
+  }
+
+  .big-news-image {
+    width: 100%;
+    height: 300px;
+    grid-column:1/2;    
+  }
+
+  .display-date {
+    font-size: 20px;
+    margin: 30px 50px;
+    text-align: end;
+  }
+
+  .news-item-caption{
+    font-size: 20px;
+  }
+
+  .news-item-image {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
   }
 }
 
