--- a/code/style.css
+++ b/code/style.css
@@ -295,28 +295,44 @@ button {
     flex: 1 0 50%;
   }
 
-  
-
   .info-boxes {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+  }
+
+  .info-boxes p {
+    border-bottom: 1px solid #275DF1;
+    border-top: 1px solid #275DF1;
   }
 
   .box  {
-    width: 48%;
+    width: 40%;
     height: 250px;
-    border: 5px solid #cfe0e8;
-    margin: 10px 0;
+    background: #87A5F7;
+    margin: 10px 10px;
+    flex-direction: column-reverse;
+    box-shadow: 7px 7px 5px #cfe0e8;
+  }
+  .text-in-fatbox {
+    flex: 1 0 28%;
+    margin-top: 10px;
+  }  
+
+  .image-box {
+    justify-content: center;
+    height: 60%;
+    width: 100%;
   }
 
   .image-box img {
+    max-width: 90%;
+    max-height: 90%;
     padding: 0;
     margin-left: 5px;
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
   }
-
 
 }
 
